--- a/Monithor.Client/Monithor.Client.csproj
+++ b/Monithor.Client/Monithor.Client.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="1.0.0-rc1-final" />
+    <PackageReference Include="SignalRHelper.Client" Version="1.18.131.1" />
   </ItemGroup>
 
 </Project>
